# separat

./: README.md  pyproject.toml
.github/workflows/: black.yml  mypy.yml  ruff.yml
dev/: check.py
src/separat/: cli.py  core.py  firefox_profile.py  inotify_simple.py  plasma_config.py  state.py  storage.py  tmux.py  util.py  watcher.py  xdg_desktop.py
