[project]
name = "separat"
version = "0.1.0"
requires-python = ">=3.9"

[project.scripts]
separat = "separat.cli:main"
watcher = "separat.watcher:main"

[dependency-groups]
dev = [
    "black==25.11",
    "ruff==0.15.20",
    "mypy==1.19",
    "pytest>=8.4.2,<9",
]

[tool.black]
line-length = 140
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_unreachable = true
pretty = true
exclude = '^\.venv/'

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "UP", "B"] # isort, pyupgrade, bugbear
